--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <body>
     <h1>Hello Losers...</h1>
     <h2>Here are some cool photos I found or whatever...</h2>
-    <img src="/Users/allen/Documents/GitHub/bai/images/8540012748_090953eb27_o.jpg">
+    <img src="cat.jpg">
     <br>
     <audio controls>b0nk
       <source src="bonk.mp3" type="audio/mp3">
     </audio>
     <h2>Enjoy this photo or else>:/</h2>
-    <img src="/Users/allen/Documents/GitHub/bai/images/survivor-parvati-shallow.jpeg" style="width:600px;height:450px;">
+    <img src="parv.jpeg" style="width:600px;height:450px;">
     <p>Did you enjoy?</p>
   </body>
 </html>
